--- a/package.json
+++ b/package.json
@@ -31,12 +31,15 @@
     "react-native-screens": "~3.0.0",
     "react-native-svg": "^12.1.1",
     "react-native-swiper": "^1.6.0-rc.3",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
+    "@types/react-redux": "^7.1.18",
     "react-native-svg-transformer": "^0.14.3",
     "typescript": "~4.0.0"
   },
