--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-community/netinfo": "6.0.0",
     "@react-navigation/bottom-tabs": "^5.11.11",
-    "@react-navigation/native": "^5.9.4",
-    "@react-navigation/stack": "^5.14.5",
+    "@react-navigation/drawer": "^6.1.0",
+    "@react-navigation/native": "^6.0.2",
+    "@react-navigation/stack": "^6.0.3",
     "axios": "^0.21.1",
     "expo": "~42.0.1",
     "expo-app-loading": "^1.0.3",
@@ -28,6 +29,7 @@
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-iphone-x-helper": "^1.3.1",
+    "react-native-paper": "^4.9.2",
     "react-native-reanimated": "~2.1.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
