--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-linear-gradient": "~9.1.0",
     "expo-status-bar": "~1.0.4",
     "lottie-react-native": "4.0.2",
+    "moment": "^2.29.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
