--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo": "~42.0.1",
     "expo-app-loading": "^1.0.3",
     "expo-font": "^9.2.1",
+    "expo-image-picker": "~10.2.2",
     "expo-linear-gradient": "~9.1.0",
     "expo-status-bar": "~1.0.4",
     "lottie-react-native": "4.0.2",
