--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-paper": "^4.9.2",
     "react-native-reanimated": "~2.1.0",
+    "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
     "react-native-svg": "^12.1.1",
