--- a/package.json
+++ b/package.json
@@ -8,47 +8,50 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/masked-view": "0.1.10",
-    "@react-native-community/netinfo": "6.0.0",
+    "@react-native-community/netinfo": "11.4.1",
     "@react-navigation/bottom-tabs": "^5.11.11",
     "@react-navigation/drawer": "^6.1.0",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.0.3",
     "axios": "^0.21.1",
-    "expo": "~42.0.1",
+    "expo": "^52.0.18",
     "expo-app-loading": "^1.0.3",
-    "expo-font": "^9.2.1",
-    "expo-image-picker": "~10.2.2",
-    "expo-linear-gradient": "~9.1.0",
-    "expo-status-bar": "~1.0.4",
-    "lottie-react-native": "4.0.2",
+    "expo-font": "~13.0.1",
+    "expo-image-picker": "~16.0.3",
+    "expo-linear-gradient": "~14.0.1",
+    "expo-permissions": "^14.4.0",
+    "expo-status-bar": "~2.0.0",
+    "lottie-react-native": "7.1.0",
     "moment": "^2.29.1",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.5",
     "react-native-animated-loader": "^0.0.9",
     "react-native-app-intro-slider": "^4.0.4",
-    "react-native-gesture-handler": "~1.10.2",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-paper": "^4.9.2",
-    "react-native-reanimated": "~2.1.0",
+    "react-native-reanimated": "~3.16.1",
     "react-native-responsive-screen": "^1.4.2",
-    "react-native-safe-area-context": "3.2.0",
-    "react-native-screens": "~3.0.0",
-    "react-native-svg": "^12.1.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.1.0",
+    "react-native-svg": "^15.10.1",
     "react-native-swiper": "^1.6.0-rc.3",
-    "react-native-web": "~0.13.12",
+    "react-native-web": "~0.19.13",
     "react-redux": "^7.2.4",
     "redux": "^4.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0",
-    "@types/react": "~16.9.35",
+    "@babel/core": "^7.25.2",
+    "@types/react": "~18.3.12",
     "@types/react-native": "~0.63.2",
     "@types/react-redux": "^7.1.18",
-    "react-native-svg-transformer": "^0.14.3",
-    "typescript": "~4.0.0"
+    "metro-react-native-babel-preset": "^0.77.0",
+    "metro-react-native-babel-transformer": "^0.77.0",
+    "react-native-svg-transformer": "^1.5.0",
+    "typescript": "^5.3.3"
   },
   "private": true
 }
